--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Cabeçalho -->
+        <nav>
+            <!-- Barra de Navegação -->
+        </nav>
+    </header>
+
+
+    <main>
+        <!-- Corpo da Página -->
+
+    </main>
+  
+    <aside>
+        <!-- Conteudo da barra lateral -->
+    </aside>
+
+    <footer>
+        <!-- Rodapé da página -->
+        Desenvolvido por Lucas Cabral
+    </footer>
 </body>
 </html>
